# food-powder-calculator

./: .gitignore  .pre-commit-config.yaml  BUILD  README.md  pants.toml  pyproject.toml
src/: BUILD  food.py  gs_whey.py  hlth_code.py  main.py  solvers_list.py  soylent.py
stubs/pyomo/: BUILD  environ.pyi
tests/: test_solvers_list.py
