[project]
name="food-powder-calculator"
description="An application for calculating the optimal food powder mix."
version = "0.1.0"
dependencies = [
    "highspy",
    "maingopy",
    "pre-commit",
    "pyomo",
    "pytest",
    "ruff",
]

[tool.ruff]
line-length = 80
indent-width = 4
target-version = ["py313"]

[tool.ruff.lint]
docstring-code-format = true